Fixing issue with white space on right of page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,11 +3,17 @@
  *= require_tree .
  *= require twitter/bootstrap
  */
+
+ html, body {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden; 
+ }
+
  body {
 	background-image:url('bg.png');
 	background-color:#cccccc;
-	padding: 0;
-	margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
